# omni

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  run.sh
benchmarks/: Cargo.toml  README.md
benchmarks/config/: default.toml  latency.toml
benchmarks/scripts/: ci_benchmark.yml  prepare_nq_data.py  run_benchmarks.sh  run_latency_benchmark.sh
benchmarks/src/: main.rs  prepare_nq.rs
benchmarks/src/config/: mod.rs
benchmarks/src/datasets/: beir.rs  custom.rs  mod.rs  msmarco.rs  natural_questions.rs
benchmarks/src/evaluator/: benchmark_evaluator.rs  latency_benchmark.rs  metrics.rs  mod.rs
benchmarks/src/indexer/: mod.rs
benchmarks/src/reporter/: mod.rs
benchmarks/src/search_client/: mod.rs
connectors/atlassian/: Cargo.toml  Dockerfile
connectors/atlassian/src/: api.rs  auth.rs  client.rs  config.rs  confluence.rs  connector.rs  jira.rs  lib.rs  main.rs  models.rs  sdk_client.rs  sync.rs
connectors/atlassian/tests/: integration_test.rs  sync_integration_test.rs
connectors/fireflies/: Cargo.toml  Dockerfile
connectors/fireflies/src/: api.rs  client.rs  config.rs  connector.rs  lib.rs  main.rs  models.rs  sync.rs
connectors/google/: Cargo.toml  Dockerfile  MULTITHREADING.md
connectors/google/src/: admin.rs  api.rs  auth.rs  cache.rs  chat.rs  config.rs  connector.rs  drive.rs  gmail.rs  lib.rs  main.rs  models.rs  rate_limiter.rs  routes.rs  sync.rs
connectors/google/tests/: integration_tests.rs  multithreading_test.rs  stale_sync_recovery_test.rs  sync_run_test.rs  sync_state_test.rs
connectors/google_ads/: Dockerfile  main.py  pyproject.toml
connectors/google_ads/google_ads_connector/: __init__.py  client.py  config.py  connector.py  mappers.py  models.py  pagination.py
connectors/google_ads/tests/: test_config.py  test_connector.py  test_mappers.py
connectors/hubspot/: Dockerfile  README.md  main.py  pyproject.toml
connectors/hubspot/hubspot_connector/: __init__.py  client.py  config.py  connector.py  mappers.py  pagination.py
connectors/hubspot/tests/: __init__.py  conftest.py  test_auth_failure.py  test_connector.py  test_forbidden.py  test_full_sync.py  test_mappers.py
connectors/microsoft/: Dockerfile  README.md  main.py  pyproject.toml
connectors/microsoft/ms_connector/: __init__.py  auth.py  connector.py  graph_client.py  mappers.py
connectors/microsoft/tests/: conftest.py  test_full_sync.py  test_graph_client.py  test_sync.py  test_syncers.py
connectors/nextcloud/: Cargo.toml  Dockerfile  README.md
connectors/nextcloud/src/: api.rs  client.rs  config.rs  connector.rs  main.rs  models.rs  sync.rs
connectors/nextcloud/tests/: integration_test.rs
connectors/notion/: Dockerfile  main.py  pyproject.toml
connectors/notion/notion_connector/: __init__.py  client.py  config.py  connector.py  mappers.py
connectors/notion/tests/: conftest.py  test_full_sync.py  test_incremental_sync.py  test_permissions.py
connectors/paperless/: Cargo.toml  Dockerfile  pyproject.toml
connectors/paperless/paperless_connector/: client.py  connector.py  mappers.py  models.py
connectors/paperless/src/: api.rs  client.rs  config.rs  main.rs  models.rs  sync.rs
connectors/paperless/tests/: integration_test.rs  test_client.py  test_connector.py  test_integration.py  test_mappers.py
connectors/slack/: Cargo.toml  Dockerfile
connectors/slack/src/: api.rs  auth.rs  client.rs  config.rs  connector.rs  content.rs  lib.rs  main.rs  models.rs  sdk_client.rs  socket.rs  sync.rs
connectors/slack/tests/: mock_slack.rs  sync_integration_test.rs
connectors/web/: Cargo.toml  Dockerfile
connectors/web/src/: api.rs  config.rs  lib.rs  main.rs  models.rs  sync.rs
connectors/web/tests/: sync_integration_test.rs  sync_run_test.rs  sync_state_test.rs
sdk/rust/: Cargo.toml
sdk/rust/src/: client.rs  connector.rs  context.rs  lib.rs  mcp_adapter.rs  models.rs  server.rs
sdk/rust/tests/: mcp_adapter_test.rs  server_integration_test.rs
services/connector-manager/: Cargo.toml  Dockerfile
services/connector-manager/src/: config.rs  connector_client.rs  handlers.rs  lib.rs  main.rs  models.rs  scheduler.rs  sync_manager.rs
services/connector-manager/tests/: integration_tests.rs
services/indexer/: Cargo.toml  Dockerfile
services/indexer/migrations/: 006_add_source_type_constraint.sql  007_create_connector_events_queue.sql  008_add_typo_tolerant_search.sql  009_add_metadata_gin_index.sql  010_create_sync_runs_table.sql  011_create_webhook_channels_table.sql
services/indexer/src/: embedding_processor.rs  error.rs  lexeme_refresh.rs  lib.rs  main.rs  people_extractor.rs  processor.rs  queue_processor.rs
services/indexer/tests/: README.md  api_integration_test.rs  batch_accumulation_test.rs  embedding_processor_integration_test.rs  event_processor_test.rs  full_flow_test.rs  integration_tests.rs  queue_processor_test.rs
services/sandbox/: Cargo.toml  Dockerfile
services/sandbox/scripts/: excel
services/sandbox/src/: executor.rs  handlers.rs  lib.rs  main.rs  models.rs
services/sandbox/tests/: integration_tests.rs
services/searcher/: Cargo.toml  Dockerfile  SEARCH_ENHANCEMENT_PLAN.md
services/searcher/src/: handlers.rs  highlighting.rs  lib.rs  main.rs  models.rs  query_parser.rs  search.rs  search_repository.rs  suggested_questions.rs  typeahead.rs
services/searcher/tests/: generate_test_embeddings.py  integration_tests.rs  rag_context_test.rs  test_embeddings.json  typo_tolerance_test.rs  unit_test.rs  (+2 more)
shared/: Cargo.toml
shared/src/: config.rs  constants.rs  content_chunker.rs  content_extractor.rs  content_extractor_xlsx.rs  content_storage.rs  embedding_queue.rs  encryption.rs  lib.rs  models.rs  queue.rs  rate_limiter.rs  sdk_client.rs  service_auth.rs  telemetry.rs  test_environment.rs  test_utils.rs  utils.rs
shared/tests/: document_repository_test.rs  embedding_queue_test.rs  embedding_repository_test.rs  event_queue_test.rs  group_repository_test.rs  service_credentials_test.rs
(+837 files in other folders)
