[package]
name = "omni-benchmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[dependencies]
# Core dependencies
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

# HTTP client for communicating with Clio services
reqwest = { workspace = true, features = ["stream"] }

# Data processing
csv = "1.3"
flate2 = "1.0"
tar = "0.4"
rayon = "1.10"
scraper = "0.22"

# Mathematical operations for metrics
statrs = "0.16"
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Progress tracking
indicatif = "0.17"

# File system operations
walkdir = "2.3"
tempfile = "3.8"

# Configuration
config = "0.14"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
uuid = "1.0"

# Shared Clio types
shared = { path = "../shared" }
omni-searcher = { path = "../services/searcher" }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
debug = true