[package]
name = "omni-atlassian-connector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "omni-atlassian-connector"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
shared = { path = "../../shared" }
anyhow = { workspace = true }
time = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dotenvy = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
redis = { workspace = true, features = ["tokio-comp"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
regex = "1.10"
base64 = "0.22"
urlencoding = "2.1"
async-stream = "0.3"
futures = { workspace = true }