[package]
name = "omni-fireflies-connector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "omni-fireflies-connector"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
shared = { path = "../../shared" }
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dotenvy = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
futures = { workspace = true }
dashmap = { workspace = true }
time = { workspace = true }
