[package]
name = "omni-fireflies-connector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "omni-fireflies-connector"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
omni-connector-sdk = { path = "../../sdk/rust" }
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dotenvy = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
time = { workspace = true }
