[package]
name = "clio-google-connector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "clio-google-connector"
path = "src/main.rs"

[lib]
name = "clio_google_connector"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
shared = { path = "../../shared" }
axum = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = "9"
base64 = "0.21"
pdfium-render = { version = "0.8.25", features = ["sync"] }