[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microsoft-connector"
version = "1.0.0"
description = "Microsoft 365 connector for Omni (OneDrive, Outlook, Calendar, SharePoint)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Omni Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "omni-connector",
    "azure-identity>=1.15.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.0",
    "respx>=0.20.0",
    "mypy>=1.8.0",
    "ruff>=0.4.0",
    "testcontainers[redis]>=4.0.0",
    "asyncpg>=0.29.0",
    "docker>=7.0.0",
    "python-ulid>=3.0.0",
    "starlette>=0.36.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["ms_connector"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = [".", "../../sdk/python"]
markers = ["integration: integration tests requiring Docker"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.uv.sources]
omni-connector = { path = "../../sdk/python", editable = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
