[package]
name = "omni-nextcloud-connector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "omni-nextcloud-connector"
path = "src/main.rs"

[lib]
name = "omni_nextcloud_connector"
path = "src/lib.rs"

[dependencies]
omni-connector-sdk = { path = "../../sdk/rust" }
async-trait = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
urlencoding = "2.1"
quick-xml = "0.39"
time = { workspace = true, features = ["parsing"] }

[dev-dependencies]
wiremock = "0.6"
