[package]
name = "omni-paperless-connector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "omni-paperless-connector"
path = "src/main.rs"

[lib]
name = "omni_paperless_connector"
path = "src/lib.rs"

[dependencies]
shared = { path = "../../shared" }
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dashmap = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
