[package]
name = "clio-indexer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "clio_indexer"
path = "src/lib.rs"

[[bin]]
name = "clio-indexer"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tokio-stream = "0.1"
sqlx = { workspace = true, features = ["migrate"] }
pgvector = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
axum = { version = "0.7", features = ["tokio"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = { version = "1.0", features = ["full"] }
chrono = { workspace = true }
uuid = { workspace = true }
ulid = { workspace = true }
bytes = "1.0"
shared = { path = "../../shared" }

[dev-dependencies]
axum-test = "15.3"
futures = "0.3"